testsuite/tests/typecheck/should_fail/T19397E3.hs
module Main where
import T19397S (foo)
